Add overview presentation, tweak layering figure in overview presentation and project white paper

--- a/WhitePapers/ParallelRenderingSystems/paper.tex
+++ b/WhitePapers/ParallelRenderingSystems/paper.tex
@@ -70,8 +70,9 @@ graphics clusters is outlined.
 \hline
 \bf Version & \bf Date & \bf Changes \\
 \hline
-0.5.1       & July 5, 2006   & Added link to latest version\\
-0.5         & May 19, 2006   & Initial Version\\
+0.5.2       & September 19, 2006   & Tweaked Figure~\ref{FIG_parallel}\\
+0.5.1       & July 5, 2006         & Added link to latest version\\
+0.5         & May 19, 2006         & Initial Version\\
 \hline
 \multicolumn{3}{c}{\footnotesize Latest version at 
   \htmladdnormallink{http://www.equalizergraphics.com/documents/ParallelRenderingSystems.pdf}
