minor documentation (project status) update

--- a/WhitePapers/ProjectEqualizer/paper.tex
+++ b/WhitePapers/ProjectEqualizer/paper.tex
@@ -78,7 +78,8 @@ looking for contributions or founding for several components of Equalizer.
 \hline
 \bf Version & \bf Date & \bf Changes \\
 \hline
-0.1         & July 5, 2006   & Initial Draft\\
+0.2         & October 5, 2006 & update status\\
+0.1         & July 5, 2006    & initial draft\\
 \hline
 \multicolumn{3}{c}{\small Latest version at 
   \htmladdnormallink{http://www.equalizergraphics.com/documents/ProjectEqualizer.pdf}
@@ -234,10 +235,11 @@ can provide excellent performance.
 Much of the development of Equalizer is driven by the actual need of the
 users, which are at the moment the software developers. 
 
-By the end of 2006, the programming framework will be developed to a
-usable state for the development of commercial multipipe applications by
-an experienced OpenGL programmer. This includes some scalability modes
-to show the benefits of scalable rendering on commodity graphics clusters.
+Currently, the programming framework is usable for the development of
+commercial multipipe applications by an experienced OpenGL
+programmer. By the end of 2006, we will have implemented the core
+scalable rendering engine to show the benefits of scalable rendering on
+commodity graphics clusters.
 
 The transparent layer will be developed in 2007. The founding for this
 effort is currently investigated. Interested parties are strongly
@@ -247,8 +249,9 @@ encouraged to contact us with proposals.
 The core part of the Equalizer project is the programming framework and
 resource server. Naturally, these two components are the first major
 milestone. Currently, they are usable to start the development of
-parallel graphics applications. Both the server and the client library
-miss major functionality, particularly decomposition modes. 
+parallel graphics applications. Right now Equalizer supports multipipe
+rendering for display walls and immersive virtual reality installations,
+including stereo and head tracking.
 
 \subsection{Transparent Layer}
 The transparent layer is an important component, since it lowers the
