website: Update project description and feature list

--- a/WhitePapers/ProjectEqualizer/paper.bib
+++ b/WhitePapers/ProjectEqualizer/paper.bib
@@ -1,4 +1,10 @@
 
+@misc{Features,
+	Author = {Stefan Eilemann},
+	Title = {{Equalizer Feature List}},
+	Url = {http://www.equalizergraphics.com/features.html},
+        Year = {2007}}
+
 @misc{Analysis,
 	Author = {Stefan Eilemann},
 	Title = {{An Analysis of Parallel Rendering Systems}},
