website: update api page, update parallel rendering systems WP

--- a/WhitePapers/ParallelRenderingSystems/paper.tex
+++ b/WhitePapers/ParallelRenderingSystems/paper.tex
@@ -70,6 +70,7 @@ graphics clusters is outlined.
 \hline
 \bf Version & \bf Date & \bf Changes \\
 \hline
+0.5.3       & January 11, 2007     & Updated Figure~\ref{FIG_multipipe}\\
 0.5.2       & September 19, 2006   & Tweaked Figure~\ref{FIG_parallel}\\
 0.5.1       & July 5, 2006         & Added link to latest version\\
 0.5         & May 19, 2006         & Initial Version\\
@@ -115,7 +116,7 @@ coherent image. In immersive environments, stereo rendering is a requirement.
 \centering
 \includegraphics[width=0.9\columnwidth]{images/sp_to_mp.pdf}
 \caption{Some advanced display systems}
-\label{FIG_parallel}
+\label{FIG_multipipe}
 \end{figure}
 
 Applications which scale their display size often have to scale
